kubernetes/argocd/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argo-test.dev.au.worklifehero.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argo-ingress
#   namespace: argocd
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#       - argo-test.dev.au.worklifehero.ai
#       secretName: default-server-secret
#   rules:
#   - host: "argo-test.dev.au.worklifehero.ai"
#     http:
#       paths:
#         - pathType: Prefix
#           path: "/"
#           backend:
#             service:
#               name: argocd-server
#               port:
#                 number: 80
